# serializer version: 1
# name: test_config
  dict({
    'co2_automatic_baseline_calibration_days': 8,
    'configuration_control': <ConfigurationControl.NOT_INITIALIZED: 'both'>,
    'country': 'DE',
    'display_brightness': 0,
    'led_bar_brightness': 100,
    'led_bar_mode': <LedBarMode.CO2: 'co2'>,
    'nox_learning_offset': 12,
    'pm_standard': <PmStandard.UGM3: 'ugm3'>,
    'post_data_to_airgradient': True,
    'temperature_unit': <TemperatureUnit.CELSIUS: 'c'>,
    'tvoc_learning_offset': 12,
  })
# ---
# name: test_current_fixtures[current_measures.json]
  dict({
    'ambient_temperature': 22.17,
    'boot_time': 4,
    'compensated_ambient_temperature': 22.17,
    'compensated_pm02': None,
    'compensated_relative_humidity': 47.0,
    'firmware_version': '3.1.1',
    'model': 'I-9PSL',
    'nitrogen_index': 1,
    'pm003_count': 270,
    'pm01': 22,
    'pm02': 34.0,
    'pm10': 41,
    'raw_ambient_temperature': 23.1,
    'raw_nitrogen': 16931.0,
    'raw_pm02': 34,
    'raw_relative_humidity': 32.0,
    'raw_total_volatile_organic_component': 31792.0,
    'rco2': 778,
    'relative_humidity': 47.0,
    'serial_number': '84fce612f5b8',
    'signal_strength': -52,
    'total_volatile_organic_component_index': 99,
  })
# ---
# name: test_current_fixtures[current_measures_2.json]
  dict({
    'ambient_temperature': 20.35,
    'boot_time': 309,
    'compensated_ambient_temperature': 20.35,
    'compensated_pm02': 6.83,
    'compensated_relative_humidity': 32.51,
    'firmware_version': '3.1.21',
    'model': 'I-9PSL',
    'nitrogen_index': 1,
    'pm003_count': 256,
    'pm01': 0,
    'pm02': 6.83,
    'pm10': 2,
    'raw_ambient_temperature': 20.35,
    'raw_nitrogen': 15568.08,
    'raw_pm02': 2,
    'raw_relative_humidity': 32.51,
    'raw_total_volatile_organic_component': 33774.83,
    'rco2': 566,
    'relative_humidity': 32.51,
    'serial_number': 'aaaaaaaaaa',
    'signal_strength': -40,
    'total_volatile_organic_component_index': 138,
  })
# ---
# name: test_current_fixtures[current_measures_zero.json]
  dict({
    'ambient_temperature': 0.0,
    'boot_time': 4,
    'compensated_ambient_temperature': 0.0,
    'compensated_pm02': 0.0,
    'compensated_relative_humidity': 0.0,
    'firmware_version': '3.1.1',
    'model': 'I-9PSL',
    'nitrogen_index': 1,
    'pm003_count': 270,
    'pm01': 22,
    'pm02': 0.0,
    'pm10': 41,
    'raw_ambient_temperature': 23.1,
    'raw_nitrogen': 16931.0,
    'raw_pm02': 34,
    'raw_relative_humidity': 32.0,
    'raw_total_volatile_organic_component': 31792.0,
    'rco2': 778,
    'relative_humidity': 0.0,
    'serial_number': '84fce612f5b8',
    'signal_strength': -52,
    'total_volatile_organic_component_index': 99,
  })
# ---
# name: test_current_fixtures[measures_after_boot.json]
  dict({
    'ambient_temperature': None,
    'boot_time': 0,
    'compensated_ambient_temperature': None,
    'compensated_pm02': None,
    'compensated_relative_humidity': None,
    'firmware_version': '3.0.8',
    'model': 'I-9PSL',
    'nitrogen_index': None,
    'pm003_count': None,
    'pm01': None,
    'pm02': None,
    'pm10': None,
    'raw_ambient_temperature': None,
    'raw_nitrogen': None,
    'raw_pm02': None,
    'raw_relative_humidity': None,
    'raw_total_volatile_organic_component': None,
    'rco2': None,
    'relative_humidity': None,
    'serial_number': '84fce612f5b8',
    'signal_strength': -59,
    'total_volatile_organic_component_index': None,
  })
# ---
# name: test_latest_version
  '3.1.4'
# ---
